# cqf_implementation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  expesCOMPARAISONS.md  kmc_2q.py  shift_test.cpp  shift_test.hpp  shitf_test.py  test.txt  test_cqf_dataset.sh  tmp.py  viktor_random_kmers.py
benchmark/: CMakeLists.txt  benchmark.cpp  plot.py
cqf/: CMakeLists.txt  additional_methods.cpp  backpack_cqf.cpp  bcqf_ec.cpp  bcqf_oom.cpp  ext_methods.cpp  filter.cpp  main.cpp  test.cpp
cqf/headers/: additional_methods.hpp  backpack_cqf.hpp  bcqf_ec.hpp  bcqf_oom.hpp  ext_methods.hpp  filter.hpp  test.hpp
cqf_sim/: CMakeLists.txt  additional_methods.cpp  ext_methods.cpp  filter.cpp  main.cpp  test.cpp
cqf_sim/headers/: additional_methods.hpp  ext_methods.hpp  filter.hpp  test.hpp
examples/: CMakeLists.txt  ecoli.cpp  main_example.cpp  random_uints.cpp  taro_oceans.cpp
examples/data/: ecoli_notes.txt  queries.fasta
flamegraph/: flamegraph.sh  perf.data  perf.data.old
src/: CMakeLists.txt  abstract_bqf.cpp  additional_methods.cpp  bqf_ec.cpp  bqf_oom.cpp  counter_encoder.cpp  cqf.cpp  main.cpp  rsqf.cpp
src/headers/: abstract_bqf.hpp  additional_methods.hpp  bqf_ec.hpp  bqf_oom.hpp  counter_encoder.hpp  cqf.hpp  rsqf.hpp
test/: CMakeLists.txt  cqf_test  quicktests.cpp  test.cpp
unitary_tests/: CMakeLists.txt  additional_methods_test.cpp  bqf_test.cpp  cqf_test.cpp
